# sj-events

./: pyproject.toml
.github/workflows/: sj-event-scraper.yml
sj_events/: constants.py  main.py
sj_events/clients/: seat_junky.py
