[tool.poetry]
name = "sj-events"
version = "0.1.0"
description = ""
authors = ["tgiles0 <tjgiles@asu.edu>"]
readme = "README.md"
packages = [{include = "sj_events"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.8.0"
beautifulsoup4 = "^4.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
